# MyLang

./: .gitignore  CMakeLists.txt  Makefile  README.md  TZ.md  a  a.asm  c_intertop  c_intertop.asm  cimp2.asm  concat_test.asm  default_test  default_test.asm  fn_test  fn_test.asm  lang  test  test.asm  test.lang  test1  test1.asm  test2  test2.asm  test3  test3.asm  test3.lang  usual_test  usual_test.asm  usual_test.lang
executables/: classAsValue  classAsValue (ERROR)  classAsValue_check  classAsValue_debug  concat  concat (ERROR)  concat_check  defaultValues  dynArrays  dynArrays (ERROR)  dynArrays_check  matr_copy  matr_copy (ERROR)  matr_copy_check  matrix  mylang_pow_float  mylang_test31  mylang_test51  mylang_test52  mylang_test53  mylang_test54  mylang_test56  mylang_test57  mylang_test60  mylang_test9  namespaces  namespaces_check  namespaces_check_final  outOfBounds  pow  pow_check  pow_neg_check  selection_sort  selection_sort_check  struct_operations  test1  test101  test101_check  test102_check  test11  (+87 more)
inc/: Ast.hpp  CodeGen.hpp  SymbolTable.hpp  Tokens.hpp  Type.hpp
runtime/: array.asm  error.asm  input_output.asm  memory.asm  runtime.asm  string.asm
specs/: grammar.md  semantics.md  types.md
src/: CodeGen.cpp  Compile.cpp  Interpret.cpp  Lexer.cpp  Parser.cpp  Semantic.cpp  main.cpp
tests/: concat_test  default_test  default_test.asm  default_test.lang  dtor_test  dtor_test.asm  dtor_test.lang  dyn_test  dyn_test.asm  global_test  global_test.asm  global_test.lang  rt_div  rt_div.asm  test  test.asm  test2  test2.asm  test2.lang  test3  test3.asm  test3.lang  usual_test  (+2 more)
(+127 files in other folders)
